--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Custom AlertDialog style -->
-    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowMinWidthMajor">80%</item>
-        <item name="android:windowMinWidthMinor">80%</item>
-        <item name="colorAccent">#800080</item>
+    <style name="CircularImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
+    <style name="StudentListTheme" parent="Theme.AppEtudiant">
+        <item name="android:statusBarColor">@color/app_purple</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="actionBarStyle">@style/ActionBar.Solid.AppEtudiant</item>
+    </style>
+
+    <style name="ActionBar.Solid.AppEtudiant" parent="@style/Widget.AppCompat.ActionBar.Solid">
+        <item name="background">@color/app_purple</item>
+        <item name="titleTextStyle">@style/ActionBarTitleText</item>
+    </style>
+
+    <style name="ActionBarTitleText" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 </resources>
